--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "2.10.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "3.15.0",
+    "react-native-svg": "^13.2.0",
     "react-native-vector-icons": "9.2.0",
     "react-navigation-stack": "2.10.4",
     "react-redux": "8.0.2",
@@ -46,6 +47,7 @@
     "jest": "^29.0.3",
     "metro-react-native-babel-preset": "^0.72.3",
     "prettier": "^2.7.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
