-completion of test, pending correct image url path

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,9 @@ install! 'cocoapods', :deterministic_uuids => false
 
 target 'esyms' do
   config = use_native_modules!
+  
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 
   # Flags change depending on the env values.
   flags = get_default_flags()
