--- a/ios/esyms/Info.plist
+++ b/ios/esyms/Info.plist
@@ -72,6 +72,21 @@
 		<string>Inter-Thin.otf</string>
 		<string>Inter-ThinItalic.otf</string>
 		<string>Inter-V.ttf</string>
+		<string>AntDesign.ttf</string>
+        <string>Entypo.ttf</string>
+        <string>EvilIcons.ttf</string>
+        <string>Feather.ttf</string>
+        <string>FontAwesome.ttf</string>
+        <string>FontAwesome5_Brands.ttf</string>
+        <string>FontAwesome5_Regular.ttf</string>
+        <string>FontAwesome5_Solid.ttf</string>
+        <string>Foundation.ttf</string>
+        <string>Ionicons.ttf</string>
+        <string>MaterialIcons.ttf</string>
+        <string>MaterialCommunityIcons.ttf</string>
+        <string>SimpleLineIcons.ttf</string>
+        <string>Octicons.ttf</string>
+        <string>Zocial.ttf</string>
 	</array>
 </dict>
 </plist>
